testsuite/tests/typecheck/should_fail/tcfail104.stderr

tcfail104.hs:9:10: error:
    • Couldn't match expected type ‘t’
                  with actual type ‘forall a. a -> a’
      Cannot equate type variable ‘t’
      with a type involving polytypes: forall a1. a1 -> a1
      ‘t’ is a rigid type variable bound by
        the inferred type of f1 :: t -> a -> a
        at tcfail104.hs:9:1-35
    • When checking that the pattern signature: forall a. a -> a
        fits the type of its context: t
      In the pattern: x :: forall a. a -> a
      In the expression: \ (x :: forall a. a -> a) -> x
    • Relevant bindings include
        f1 :: t -> a -> a (bound at tcfail104.hs:9:1)

tcfail104.hs:10:10: error:
    • Couldn't match expected type: a0 -> a0
                  with actual type: forall a. a -> a
    • When checking that the pattern signature: forall a. a -> a
        fits the type of its context: a0 -> a0
      In the pattern: x :: forall a. a -> a
      In the expression: \ (x :: forall a. a -> a) -> x

tcfail104.hs:14:15: error:
    • Couldn't match expected type: Char -> Char
                  with actual type: forall a. a -> a
    • When checking that the pattern signature: forall a. a -> a
        fits the type of its context: Char -> Char
      In the pattern: x :: forall a. a -> a
      In the expression: \ (x :: forall a. a -> a) -> x

tcfail104.hs:22:15: error:
    • Couldn't match expected type: Char -> Char
                  with actual type: forall a. a -> a
    • When checking that the pattern signature: forall a. a -> a
        fits the type of its context: Char -> Char
      In the pattern: x :: forall a. a -> a
      In the expression: \ (x :: forall a. a -> a) -> x
